--- a/source/help.html
+++ b/source/help.html
@@ -360,12 +360,12 @@ Comment out h1 header
         <dd> A type of FHIR datatypes that
             represents a concept by plain text and/or one or more Coding
             elements.
-            Note: Codeable is a long standing spelling in FHIR spec and is accpeted by the community.
+            Note: Codeable is a long standing spelling in FHIR spec and is accepted by the community.
         </dd>
         <dt>CodeableReference</dt>
         <dd> A type of FHIR datatypes that
             represents a concept by a CodeableConcept, or by direct reference to the definition of the concept (by some resource).
-            Note: Codeable is a long standing spelling in FHIR spec and is accpeted by the community.
+            Note: Codeable is a long standing spelling in FHIR spec and is accepted by the community.
         </dd>
         <dt>Complex datatype</dt>
         <dd>is usually a structure with
