--- a/source/terminologies-systems.html
+++ b/source/terminologies-systems.html
@@ -100,7 +100,7 @@ here, the correct URI may be determined by working through the following list, i
  </tr>
  <tr>
    <td>http://fdasis.nlm.nih.gov <a name="http://fdasis.nlm.nih.gov"></a></td>
-   <td><a href="http://www.fda.gov/Drugs/InformationOnDrugs/ucm142438.htm">Unique Ingredient Identifier (UNII)</a></td>
+   <td><a href="https://www.fda.gov/industry/fda-data-standards-advisory-board/fdas-global-substance-registration-system">Unique Ingredient Identifier (UNII)</a></td>
    <td><a href="https://terminology.hl7.org/UNII.html">Using UNII with HL7 Standards</a></td>
    <td style="color : DarkGrey">2.16.840.1.113883.4.9</td>
  </tr>
