FHIR-47627 FHIR release update schedule

--- a/source/versions.html
+++ b/source/versions.html
@@ -211,14 +211,14 @@ A detailed analysis of the basis for the maturity metrics for FHIR artifacts can
 <h3>FHIR Releases and Versioning</h3>
 
 <p>
-New versions of FHIR will be published on a release cycle of approximately 18-24 months.  This frequency is based on
-the timelines necessary to consult with implementers, to develop and review new content, as well as to undertake the
-formal balloting and reconciliation processes required for ANSI-approved standards.  This release cycle also ensures
-an opportunity to incorporate implementer feedback from earlier versions of the specification into subsequent versions.
-Limited-scope releases on a shorter timeline may occur occasionally where necessary to meet implementer needs.
+New versions of FHIR are published in an ongoing basis.  The time between publications is based on the timelines necessary
+to consult with implementers, to develop and review new content, as well as to undertake the formal balloting and reconciliation
+processes required for ANSI-approved standards.  This release cycle also ensures an opportunity to incorporate implementer
+feedback from earlier versions of the specification into subsequent versions. Limited-scope releases on a shorter timeline
+may occur occasionally where necessary to meet implementer needs.
 </p>
 <p>
-Each new release is assigned a unique version number. The FHIR version policy is based on
+Each new release of FHIR is assigned a unique version number. The FHIR version policy is based on
 <a href="http://semver.org/">Semantic versioning</a>, but with some differences due to the
 fact that FHIR is a specification, not a software API.
 </p>
