--- a/source/search.html
+++ b/source/search.html
@@ -1080,9 +1080,10 @@ name=valueA,valueB</span>
   </tr>
   <tr>
     <td><code><a href="#modifiercontains">contains</a></code></td>
-    <td><a href="#string">string</a>, <a href="#uri">uri</a></td>
+    <td><a href="#reference">reference</a>, <a href="#string">string</a>, <a href="#uri">uri</a></td>
     <td>
-      Tests whether the value in a resource includes the supplied parameter value anywhere within the field being searched.
+      Tests whether the value in a resource includes the supplied parameter value anywhere within the field being searched or
+      if a hierarchial relationship has a matching value within the tree it covers.
     </td>
   </tr>
   <tr>
@@ -1494,15 +1495,59 @@ language:code-text=EN</span>
   <a name="modifiercontains"></a>
   <h5>contains</h5>
   <p>
-    The <code>contains</code> modifier allows clients to indicate that a supplied <code>string</code> input is used
+    The <code>contains</code> modifier allows clients to indicate that a supplied input is used 
+    as a containment test when matching against the target value. The exact semantics for use vary depending on the type of search parameter.
+  </p>
+
+  <h6>contains with <em>reference</em> search type parameters</h6>
+  <p>
+    When using the <code>contains</code> modifier with <a href="#reference">reference</a> type search 
+    parameters, reference test values are allowed (e.g., a logical identifier).
+  </p>
+  <p>
+    The search parameter is a reference to a resource that is part of a hierarchical tree, and the search should return the specified resource along with all resources above (ancestors) and below (descendants) it in the hierarchy. This is equivalent to combining both <code>:above</code> and <code>:below</code> searches plus the specified resource itself.
+  </p>
+  <p>
+    This modifier is useful when you need the full context of a hierarchical resource in a single query. For example, when working on a specific task in a task tree, you may want to see the entire branch from root to leaves in one request.
+  </p>
+
+  <p>
+    For example, the search:
+    <span class="http-search-example">
+      <span class='http-verb-selector'>Show as unencoded: <a href='#get'>HTTP GET</a> | <a href='#post'>HTTP POST</a></span>
+      <span class="http-verb-display">
+        <span class="http-verb-display-get">GET [base]/Task?part-of:contains=Task/T1A</span>
+        <span class="http-verb-display-post">POST [base]/Task/_search
+Content-Type: application/x-www-form-urlencoded
+part-of:contains=Task/T1A</span>
+      </span>
+    </span>
+    would match any Task resources that contain task T1A in a hierarchy, including T1A itself, its ancestors, and its descendants.
+    Given a task tree where:
+  </p>
+  <ul>
+    <li>T1 is the root task</li>
+    <li>T1A and T1B are sub-tasks of T1</li>
+    <li>T1A1 and T1A2 are sub-tasks of T1A</li>
+  </ul>
+  <p>
+    This search would return: T1 (ancestor), T1A (the specified task), T1A1 and T1A2 (descendants).
+  </p>
+  <p>
+    Note: The <code>:contains</code> modifier can only be used with reference search parameters that support hierarchical relationships (typically those that reference the same resource type they are defined on, like <code>Location.partOf</code> or <code>Task.partOf</code>).
+  </p>
+
+  <h6>contains with <em>string</em> and <em>uri</em> search type parameters</h6>
+  <p>
+    When using the <code>contains</code> modifier with <a href="#string">string</a> or <a href="search.html">uri</a> type search 
+    parameters, all typically-valid search parameter string inputs are allowed.
+  </p>
+  <p>
+    The <code>contains</code> modifier in this context allows clients to indicate that a supplied <code>string</code> input is used
     as a case-insensitive and combining-character insensitive test when matching anywhere in the target string. Note that the handling of extended 
     <a href="http://unicode.org/reports/tr29/#Grapheme_Cluster_Boundaries">grapheme clusters</a> is within the discretion of 
     the server, i.e., the server decides if a string search parameter matches on canonically equivalent characters or matches on
 		the actual used Unicode code points. Case-insensitive comparisons do not take locale into account, and will result in unsatisfactory results for certain locales. Character case definitions and conversions are out of scope for the FHIR standard, and the results of such operations are implementation dependent.
-  </p>
-  <p>
-    <code>contains</code> is allowed on <a href="#string">string</a> and <a href="search.html">uri</a> type search 
-    parameters. When using the 'contains' modifier, all typically-valid search parameter string inputs are allowed.
   </p>
   <p>
     For example, the search:
