FHIR-42924 - Fix cross-version extension table errors and add R6

--- a/source/versions.html
+++ b/source/versions.html
@@ -1134,39 +1134,70 @@ instead (e.g., storing the data in a database or converting the resource to a ve
 		<td>R2 Package</td>
 		<td>R3 Package</td>
 		<td>R4 Package</td>
+		<td>R4B Package</td>
+		<td>R5 Package</td>
+		<td>R6 Package</td>
 	</tr>
   <tr>
 	  <td>R2 Extensions:</td>
 		<td style="background-color: #EEEEEE">n/a</td>
-		<td>hl7.fhir.extensions.r2:3.0.1 <a href="http://hl7.org/fhir/1.0/extensions/3.0/package.tgz"><img src="npm16.png"/></a></td>
-		<td>hl7.fhir.extensions.r2:4.0.1 <a href="http://hl7.org/fhir/1.0/extensions/4.0/package.tgz"><img src="npm16.png"/></a></td>
-		<td>hl7.fhir.extensions.r2:5.0.0 <a href="http://hl7.org/fhir/1.0/extensions/5.0/package.tgz"><img src="npm16.png"/></a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r3.r2/">hl7.fhir.uv.xver-r3.r2</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r4.r2/">hl7.fhir.uv.xver-r4.r2</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r4b.r2/">hl7.fhir.uv.xver-r4b.r2</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r5.r2/">hl7.fhir.uv.xver-r5.r2</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r6.r2/">hl7.fhir.uv.xver-r6.r2</a></td>
 	</tr>
   <tr>
 	  <td>R3 Extensions:</td>
-		<td>hl7.fhir.extensions.r3:1.0.2 <a href="http://hl7.org/fhir/3.0/extensions/1.0/package.tgz"><img src="npm16.png"/></a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r2.r3/">hl7.fhir.uv.xver-r2.r3</a></td>
 		<td style="background-color: #EEEEEE">n/a</td>
-		<td>hl7.fhir.extensions.r3:4.0.1 <a href="http://hl7.org/fhir/3.0/extensions/4.0/package.tgz"><img src="npm16.png"/></a></td>
-		<td>hl7.fhir.extensions.r3:5.0.0 <a href="http://hl7.org/fhir/3.0/extensions/5.0/package.tgz"><img src="npm16.png"/></a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r4.r3/">hl7.fhir.uv.xver-r4.r3</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r4b.r3/">hl7.fhir.uv.xver-r4b.r3</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r5.r3/">hl7.fhir.uv.xver-r5.r3</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r6.r3/">hl7.fhir.uv.xver-r6.r3</a></td>
 	</tr>
   <tr>
 	  <td>R4 Extensions:</td>
-		<td>hl7.fhir.extensions.r4:1.0.2 <a href="http://hl7.org/fhir/4.0/extensions/1.0/package.tgz"><img src="npm16.png"/></a></td>
-		<td>hl7.fhir.extensions.r4:3.0.1 <a href="http://hl7.org/fhir/4.0/extensions/3.0/package.tgz"><img src="npm16.png"/></a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r2.r4/">hl7.fhir.uv.xver-r2.r4</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r3.r4/">hl7.fhir.uv.xver-r3.r4</a></td>
 		<td style="background-color: #EEEEEE">n/a</td>
-		<td>hl7.fhir.extensions.r4:5.0.0 <a href="http://hl7.org/fhir/4.0/extensions/5.0/package.tgz"><img src="npm16.png"/></a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r4b.r4/">hl7.fhir.uv.xver-r4b.r4</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r5.r4/">hl7.fhir.uv.xver-r5.r4</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r6.r4/">hl7.fhir.uv.xver-r6.r4</a></td>
+	</tr>
+  <tr>
+	  <td>R4B Extensions:</td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r2.r4b/">hl7.fhir.uv.xver-r2.r4b</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r3.r4b/">hl7.fhir.uv.xver-r3.r4b</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r4.r4b/">hl7.fhir.uv.xver-r4.r4b</a></td>
+		<td style="background-color: #EEEEEE">n/a</td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r5.r4b/">hl7.fhir.uv.xver-r5.r4b</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r6.r4b/">hl7.fhir.uv.xver-r6.r4b</a></td>
 	</tr>
   <tr>
 	  <td>R5 Extensions:</td>
-		<td>hl7.fhir.extensions.r4:1.0.2 <a href="http://hl7.org/fhir/4.0/extensions/1.0/package.tgz"><img src="npm16.png"/></a></td>
-		<td>hl7.fhir.extensions.r4:3.0.1 <a href="http://hl7.org/fhir/4.0/extensions/3.0/package.tgz"><img src="npm16.png"/></a></td>
-		<td>hl7.fhir.extensions.r4:4.0.1 <a href="http://hl7.org/fhir/4.0/extensions/4.0/package.tgz"><img src="npm16.png"/></a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r2.r5/">hl7.fhir.uv.xver-r2.r5</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r3.r5/">hl7.fhir.uv.xver-r3.r5</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r4.r5/">hl7.fhir.uv.xver-r4.r5</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r4b.r5/">hl7.fhir.uv.xver-r4b.r5</a></td>
+		<td style="background-color: #EEEEEE">n/a</td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r6.r5/">hl7.fhir.uv.xver-r6.r5</a></td>
+	</tr>
+  <tr>
+	  <td>R6 Extensions:</td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r2.r6/">hl7.fhir.uv.xver-r2.r6</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r3.r6/">hl7.fhir.uv.xver-r3.r6</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r4.r6/">hl7.fhir.uv.xver-r4.r6</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r4b.r6/">hl7.fhir.uv.xver-r4b.r6</a></td>
+		<td><a href="https://hl7.org/fhir/uv/xver-r5.r6/">hl7.fhir.uv.xver-r6.r6</a></td>
 		<td style="background-color: #EEEEEE">n/a</td>
 	</tr>
+
 </table>
 
 <p>
-Note for balloters: the R5 packages will be created when R5 is finalized. Until then, these are broken links.
+Note that some guides linked above will not exist at the time of publication (e.g., extensions based-on or targeting this release). 
+The links will be correct and will resolve once the packages are available.
 </p>
 
 <a name="plans"></a>
