FHIR-43508 - Add note about early stage of SubscriptionTopic adoption in registry

--- a/source/subscriptions.html
+++ b/source/subscriptions.html
@@ -240,11 +240,14 @@
   More details about defining and deriving subscriptions topics can be found on the <a href="subscriptiontopic.html">SubscriptionTopic</a> resource page, specifically in the sections <a href="subscriptiontopic.html#defining">Defining Subscription Topics</a> and <a href="subscriptiontopic.html#deriving">Deriving from Existing Subscription Topics</a>.
 </p>
 
-<a name="finding-topics"/>
 <h3>Finding Subscription Topics</h3>
 <p>
   Example and Canonical Subscription Topics can be found at <a href="http://registry.fhir.org/">registry.fhir.org</a>.  It is strongly suggested that implementers reuse existing topics and submit new topics whenever possible for better compatibility.
 </p>
+<p>
+Note that at the time of this publication, the <code>SubscriptionTopic</code> resource is still in the early stages of adoption. As more Implementation Guides are published and topics are registered, the number of available canonical topics in the registry will grow. Implementers are encouraged to contribute their topic definitions to the registry to improve interoperability.
+</p>
+
 
 <a name="multi-resource-topics"/>
 <h3>Multi-Resource Topics</h3>
