FHIR-44616 - Document data-absent-reason for inter-version mandatory elements

--- a/source/versions.html
+++ b/source/versions.html
@@ -763,11 +763,10 @@ Implementers should be aware of the following issues when using these extensions
   added to the element that will contain the name of the complex type in the source version.
  </li>
  <li>
-The extension mechanism carries no information about cardinalities.  If converting from the extension
-mechanism to 'core' elements when up-converting or down-converting the resource, the conversion process 
-will need to know the max occurs for the element in the target version (e.g., to know whether the element 
-should be a JSON array or not).
-
+  The extension mechanism carries no information about cardinalities.  If converting from the extension
+  mechanism to 'core' elements when up-converting or down-converting the resource, the conversion process 
+  will need to know the max occurs for the element in the target version (e.g., to know whether the element 
+  should be a JSON array or not).
  </li>
  <li>
   The vocabulary bindings can be to a specific value set version, but the expansions of those value sets 
@@ -776,6 +775,10 @@ should be a JSON array or not).
  </li>
  <li>If the referenced type includes target resources that are not supported in the adopting version, those resources will be removed.  If the result is that NO target resources are allowed, then the inter-version extension is not permitted.</li>
  <li>Where mapping simple types, the type conversions are shown in the table below. The mapping table SHALL be used.</li>
+ <li>
+  Systems SHALL annotate required elements that cannot be provided when using inter-version-conversion by using the extension: 
+  <code>http://hl7.org/fhir/StructureDefinition/data-absent-reason</code> with the code <code>unsupported</code>.
+ </li>
 </ul>
 <p>
 This table shows the mapping between primitive datatypes across versions:
