FHIR-45251 - Remove confusing non-conformance 'may' from operations documentation

--- a/source/operations.html
+++ b/source/operations.html
@@ -236,7 +236,7 @@ with respect to <a href="http.html#mime-type">content types</a>.
 <p>
 If all the parameters for the operation are <a href="datatypes.html#primitive">primitive types</a> and the operation
 has <a href="operationdefinition-definitions.html#OperationDefinition.affectsState"><code>affectsState</code></a> = false, 
-the operation may be invoked by performing an HTTP GET operation where all of the values of the parameters are appended 
+the operation is also able to be invoked by performing an HTTP GET operation where all of the values of the parameters are appended 
 to the URL in the search portion of the URL (e.g., after the '?' character). Servers SHALL support this method of invocation. 
 E.g.
 </p>
